# HawkinsAgent

./: .gitignore  .replit  README.md  build_package.py  hawkins_memory.db  hawkins_memory.db-shm  hawkins_memory.db-wal  hawkins_rag.db  package-lock.json  package.json  pyproject.toml  setup.py
attached_assets/: Pasted-import-os-import-json-import-logging-from-typing-import-Dict-Any-Optional-List-Union-from-openai-1735205517759.txt  Pasted-import-requests-from-typing-import-Dict-List-from-serpapi-import-GoogleSearch-from-googleapiclient--1735207117576.txt  Pasted-import-requests-from-typing-import-Dict-from-datetime-import-datetime-timedelta-from-tool-import--1735210023309.txt
docs/: README.md  api_reference.md  custom_tools.md  flows.md  memory_management.md
examples/: blog_writer_flow.py  knowledge_base_demo.py  maldives_trip_planner.py  model_test.py  multi_agent_flow.py  multiagent-trip-planner.py  simple_agent.py  test_rag.py  tool_test.py
hawkins_agent/: __init__.py  agent.py  memory.py
hawkins_agent.egg-info/: PKG-INFO
hawkins_agent/llm/: lite_llm.py  manager.py
hawkins_agent/mock/: __init__.py
hawkins_agent/tools/: __init__.py  base.py  email.py  rag.py  search.py  weather.py
