[project]
name = "hawkins-agent"
version = "0.1.0"
description = "A Python SDK for building AI agents with minimal code using Hawkins ecosystem"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "flask[async]>=3.1.0",
    "google-api-python-client>=2.156.0",
    "hatchling>=1.27.0",
    "hawkinsdb>=1.0.1",
    "litellm>=1.0.0",
    "open-interpreter>=0.4.3",
    "openai>=1.58.1",
    "python-dotenv>=0.19.0",
    "serpapi>=0.1.5",
    "tavily-python>=0.5.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
